--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,4 +1,4 @@
-device: &device 'cuda'
+device: &device 'cuda:1'
 seed: &seed 0
 
 main:
@@ -18,7 +18,7 @@ env:
   og_sim:
     physics_frequency: 60
     action_frequency: 15
-    
+
   scene:
     name: Rs_int
     type: InteractiveTraversableScene
@@ -55,19 +55,41 @@ env:
           name: JointController
 
   camera:
-    # recorder 
+    # recorder
     1:
       name: cam_1
-      position: [ 0.6137,  0.4764,  1.4565]
-      orientation: [ 0.3212,  0.4682,  0.6788,  0.4656]
+      position: [-0.1055, -1.0167,  1.5664]
+      # orientation: [ 0.0550,  0.0544,  0.7010,  0.7090]
+      orientation: [ 0.32212524 ,-0.21799481 , 0.66843535 , 0.63396197]
+      # position: [ 0.6137,  0.4764,  1.4565]
+      # orientation: [ 0.3212,  0.4682,  0.6788,  0.4656]
       resolution: 480
 
     # vlm camera
     0:
       name: cam_0
-      position: [-0.1655,  0.0167,  1.3664]
+      # position: [ 0.05,  -0.15,  1.5000]
+      # orientation: [ 0.0000,  0.7071,  0.0000,  0.7071]
+      position: [-0.0055, -0.7167,  1.1664]
+      # orientation: [ 0.0550,  0.0544,  0.7010,  0.7090]
+      # orientation: [ 0.32212524 ,-0.21799481 , 0.66843535 , 0.63396197] 45 degree
+      orientation: [ 0.42731777 ,-0.33075556 , 0.62042591 , 0.5683942 ] # 65 degree
+      resolution: 480
+
+    ## top view camera
+    2:
+      name: cam_2
+      position: [-0.1655,  0.0167,  1.8664]
       orientation: [ 0.0550,  0.0544,  0.7010,  0.7090]
       resolution: 480
+
+    ## top view camera
+    3:
+      name: cam_3
+      position: [-0.2655, -0.8167,  1.5664]
+      orientation: [ 0.38192255 ,0.07363133 ,0.92093397,-0.02437636]
+      resolution: 480
+
 
 path_solver:
   opt_pos_step_size: 0.20  # controls the density of control points in the path
